[gd_scene load_steps=9 format=2]

[ext_resource path="res://Modelos/Floresta/CasaMadeira/Interior/Casa_MadeiraInterior.tscn" type="PackedScene" id=1]
[ext_resource path="res://fontes/DTM-Sans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fontes/Menu_Butao.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://fontes/Butoons.tres" type="Theme" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Camera"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.750935, -150.009, 1.30084 ), Vector3( -0.40299, -150.002, 0.698028 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.751435, -0.794139, -3.24675 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.415489, -150.003, -0.71968 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="MenuInicial" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Fundo" type="Spatial" parent="."]

[node name="Casa_MadeiraInterior" parent="Fundo" instance=ExtResource( 1 )]

[node name="ViewportContainer" type="ViewportContainer" parent="Fundo"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Fundo/ViewportContainer"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Fundo/ViewportContainer/Viewport"]
transform = Transform( -0.865938, -0.0145032, -0.499941, -0.0125601, 0.999895, -0.00725158, 0.499994, -9.59262e-08, -0.866028, -0.751435, -0.794139, -3.24675 )
fov = 46.1006

[node name="Camera_Anim" type="AnimationPlayer" parent="Fundo/ViewportContainer/Viewport/Camera"]
anims/Camera = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 35
custom_constants/margin_left = 25

[node name="menubotoes" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 25.0
margin_top = 35.0
margin_right = 320.0
margin_bottom = 240.0

[node name="TÃ­tulo" type="Label" parent="Menu/MarginContainer/menubotoes"]
margin_right = 80.0
margin_bottom = 37.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Noite"

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainer/menubotoes"]
margin_top = 41.0
margin_right = 295.0
margin_bottom = 56.0
custom_constants/margin_top = 15

[node name="Jogar" type="Button" parent="Menu/MarginContainer/menubotoes"]
margin_top = 60.0
margin_right = 45.0
margin_bottom = 81.0
size_flags_horizontal = 0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Jogar"
align = 0

[node name="Sobre" type="Button" parent="Menu/MarginContainer/menubotoes"]
margin_top = 85.0
margin_right = 45.0
margin_bottom = 106.0
size_flags_horizontal = 0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Sobre"
align = 0

[node name="Sair" type="Button" parent="Menu/MarginContainer/menubotoes"]
margin_top = 110.0
margin_right = 36.0
margin_bottom = 131.0
size_flags_horizontal = 0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Sair"
align = 0

[connection signal="pressed" from="Menu/MarginContainer/menubotoes/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/menubotoes/Sobre" to="." method="_on_Sobre_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/menubotoes/Sair" to="." method="_on_Sair_pressed"]
